--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script>
     const array = ['Sasha','Masha','Dima']
       function сallback(el, id, array) {
-        console.log( el,id ,array);
+        console.log( `element "${el}" at [${id}] in array ${array}`);
       }
 
       function forEach(arr, callback) {
